ozone: Wait on EGLFence before committing buffers. Avoid using GL.

GbmSurfaceless::SwapBuffersAsync used to always call glFlush, to call
glFinish for universal link display device, and to insert an EGL fence
and wait on it when "EGL_ARM_implicit_external_sync" or
"EGL_EXT_image_flush_external" was available.

There is no guarantee that the current GL context when
GbmSurfaceless::SwapBuffersAsync is called is the context that was
used to draw to the buffers we are about to commit.
Additionally a glFlush or glFinish call does not guarantee content
is written and flushed to buffers after those calls return.

This caused some flickering on Mimo (udl device) since we'd submit
for scanout buffers while GL was still drawing to them.

This CL removes all the GL calls in GbmSurfaceless::SwapBuffersAsync,
that might have happened on the wrong context. It changes the code so
that we always insert and wait on an EGL fence, even on devices where
we don't have implicit sync or flush external, making SwapBuffersAsync
behavior more consistent across platforms.

BUG=692508

Review-Url: https://codereview.chromium.org/2858693002
Cr-Commit-Position: refs/heads/master@{#468785}

Former-commit-id: 00ef929f434505f4d09a130e0bc1d4a4938d490f